--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <header class="header">
     <div class="container">
       <nav class="menu">
-        <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header" lang="en">Studio</span></a>
+        <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header"
+            lang="en">Studio</span></a>
         <ul class="list">
           <li class="nav-item">
             <a class="nav-link current" href="./index.html">Студия</a>
@@ -35,10 +36,10 @@
         </ul>
         <div class="header-contacts">
           <ul class="list">
-            <li class="header-contacts-list">
+            <li class="header-contacts-mail">
               <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
             </li>
-            <li class="header-contacts-list">
+            <li class="header-contacts-tel">
               <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
@@ -49,85 +50,105 @@
   <main>
     <!-- HERO -->
     <section class="hero">
-      <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-      <button class="modal-btn" type="submit">Заказать услугу</button>
+      <div class="container">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="modal-btn" type="submit">Заказать услугу</button>
+      </div>
     </section>
     <!-- SPECIALTIES -->
     <section class="specialties">
-      <h2 visually-hidden>Особенности</h2>
-      <ul class="specs-list list">
-        <li class="specs-list-item">
-          <h3 class="specs-subtitle">Внимание к деталям</h3>
-          <p class="specs-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-        </li>
-        <li class="specs-list-item">
-          <h3 class="specs-subtitle">Пунктуальность</h3>
-          <p class="specs-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-        </li>
-        <li class="specs-list-item">
-          <h3 class="specs-subtitle">Планирование</h3>
-          <p class="specs-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-        </li>
-        <li class="specs-list-item">
-          <h3 class="specs-subtitle">Современные технологии</h3>
-          <p class="specs-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-        </li>
-      </ul>
+      <h2 class="visually-hidden">Особенности</h2>
+      <div class="container">
+        <ul class="specs-list list">
+          <li class="specs-list-item">
+            <h3 class="specs-subtitle">Внимание к деталям</h3>
+            <p class="specs-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li class="specs-list-item">
+            <h3 class="specs-subtitle">Пунктуальность</h3>
+            <p class="specs-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li class="specs-list-item">
+            <h3 class="specs-subtitle">Планирование</h3>
+            <p class="specs-text">Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li class="specs-list-item">
+            <h3 class="specs-subtitle">Современные технологии</h3>
+            <p class="specs-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </div>
     </section>
     <!-- SKILLS -->
     <section class="skills">
-      <h2 class="skills-title">Чем мы занимаемся</h2>
-      <ul class="skills-list list">
-        <li class="skills-list-item">
-          <img class="img" src="./images/what_we_do/what_we_do_1.jpg" alt="software developer working" lang="en">
-        </li>
-        <li class="skills-list-item">
-          <img class="img" src="./images/what_we_do/what_we_do_2.jpg" alt="women with a phone" lang="en">
-        </li>
-        <li class="skills-list-item">
-          <img class="img" src="./images/what_we_do/what_we_do_3.jpg" alt="women working on a tablet" lang="en">
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="skills-title">Чем мы занимаемся</h2>
+        <ul class="skills-list list">
+          <li class="skills-list-item">
+            <img class="img" src="./images/what_we_do/what_we_do_1.jpg" alt="software developer working" lang="en">
+          </li>
+          <li class="skills-list-item">
+            <img class="img" src="./images/what_we_do/what_we_do_2.jpg" alt="women with a phone" lang="en">
+          </li>
+          <li class="skills-list-item">
+            <img class="img" src="./images/what_we_do/what_we_do_3.jpg" alt="women working on a tablet" lang="en">
+          </li>
+        </ul>
+      </div>
     </section>
     <!-- TEAM -->
     <section class="team">
-      <h2 class="team-title">Наша команда</h2>
-      <ul class="team-list list">
-        <li class="team-list-item">
-          <img class="team-img" src="./images/our_masters/master_1.jpg" alt="friendly men in glasses" lang="en">
-          <h3 class="team-name">Игорь Демьяненко</h3>
-          <p class="team-occupation" lang="en">Product Designer</p>
-        </li>
-        <li class="team-list-item">
-          <img class="team-img" src="./images/our_masters/master_2.jpg" alt="blonde women" lang="en">
-          <h3 class="team-name">Ольга Репина</h3>
-          <p class="team-occupation" lang="en">Frontend Developer</p>
-        </li>
-        <li class="team-list-item">
-          <img class="team-img" src="./images/our_masters/master_3.jpg" alt="smiling men" lang="en">
-          <h3 class="team-name">Николай Тарасов</h3>
-          <p class="team-occupation" lang="en">Marketing</p>
-        </li>
-        <li class="team-list-item">
-          <img class="team-img" src="./images/our_masters/master_4.jpg" alt="friendly men in black t-shirt" lang="en">
-          <h3 class="team-name">Михаил Ермаков</h3>
-          <p class="team-occupation" lang="en">UI Designer</p>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list list">
+          <li class="team-list-item">
+            <img class="team-img" src="./images/our_masters/master_1.jpg" alt="friendly men in glasses" lang="en">
+            <div class="team-name-container">
+              <h3 class="team-name">Игорь Демьяненко</h3>
+              <p class="team-occupation" lang="en">Product Designer</p>
+            </div>
+          </li>
+          <li class="team-list-item">
+            <img class="team-img" src="./images/our_masters/master_2.jpg" alt="blonde women" lang="en">
+            <div class="team-name-container">
+              <h3 class="team-name">Ольга Репина</h3>
+              <p class="team-occupation" lang="en">Frontend Developer</p>
+            </div>
+          </li>
+          <li class="team-list-item">
+            <img class="team-img" src="./images/our_masters/master_3.jpg" alt="smiling men" lang="en">
+            <div class="team-name-container">
+              <h3 class="team-name">Николай Тарасов</h3>
+              <p class="team-occupation" lang="en">Marketing</p>
+            </div>
+          </li>
+          <li class="team-list-item">
+            <img class="team-img" src="./images/our_masters/master_4.jpg" alt="friendly men in black t-shirt" lang="en">
+            <div class="team-name-container">
+              <h3 class="team-name">Михаил Ермаков</h3>
+              <p class="team-occupation" lang="en">UI Designer</p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   <!-- FOOTER -->
   <footer class="footer">
-    <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-footer" lang="en">Studio</span></a>
-    <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-    <ul class="address-list list">
-      <li class="address-list-item">
-        <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      </li>
-      <li class="address-list-item">
-        <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
-      </li>
-    </ul>
+    <div class="container">
+      <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-footer" lang="en">Studio</span></a>
+      <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+      <ul class="address-list list">
+        <li class="address-list-item">
+          <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="address-list-item">
+          <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+        </li>
+      </ul>
+    </div>
   </footer>
 </body>
 
