--- a/portfolio.html
+++ b/portfolio.html
@@ -16,130 +16,157 @@
 </head>
 
 <body>
-  <header>
-    <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header" lang="en">Studio</span></a>
-    <nav class="menu">
-      <ul class="list">
-        <li class="nav-item">
-          <a class="nav-link" href="./index.html">Студия</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link current" href="https://www.devstudio.com/portfolio">Портфолио</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.devstudio.com/portfolio">Контакты</a>
-        </li>
-      </ul>
-      <div class="header-contacts">
+  <header class="header">
+    <div class="container">
+      <nav class="menu">
+        <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header"
+            lang="en">Studio</span></a>
         <ul class="list">
-          <li class="header-contacts-list">
-            <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Студия</a>
           </li>
-          <li class="header-contacts-list">
-            <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="nav-item">
+            <a class="nav-link current" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.devstudio.com/portfolio">Контакты</a>
           </li>
         </ul>
-      </div>
-    </nav>
+        <div class="header-contacts">
+          <ul class="list">
+            <li class="header-contacts-mail">
+              <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+            </li>
+            <li class="header-contacts-tel">
+              <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
   <main>
     <section class="examples">
-      <h2 visually-hidden>Наши работы</h2>
-      <ul class="examples-list list">
-        <li class="examples-list-item">
-          <button class="nav-btn" type="button">Все</button>
-        </li>
-        <li class="examples-list-item">
-          <button class="nav-btn" type="button">Веб-сайты</button>
-        </li>
-        <li class="examples-list-item">
-          <button class="nav-btn" type="button">Приложения</button>
-        </li>
-        <li class="examples-list-item">
-          <button class="nav-btn" type="button">Дизайн</button>
-        </li>
-        <li class="examples-list-item">
-          <button class="nav-btn" type="button">Маркетинг</button>
-        </li>
-      </ul>
-      <ul class="examples-img-list list">
-        <li class="examples-img-item">
-          <a class="list-items link" href="">
-            <img class="img" src="./images/portfolio/portfolio-1.jpg" alt="laptop desctop">
-            <h2 class="examples-img-title">Технокряк</h2>
-            <p class="examples-img-about">Веб-сайт</p>
-          </a>
-        </li>
-        <li class="examples-img-item">
-          <a class="list-items link" href="">
-            <img class="img" src="./images/portfolio/portfolio-2.jpg" alt="two basketball players">
-            <h2 class="examples-img-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p class="examples-img-about">Дизайн</p>
-          </a>
-        </li>
-        <li class="examples-img-item">
-          <a class="list-items link" href="">
-            <img class="img" src="./images/portfolio/portfolio-3.jpg" alt="fish restaurant logo">
-            <h2 class="examples-img-title">Ресторан <span lang="en">Seafood</span></h2>
-            <p class="examples-img-about">Приложение</p>
-          </a>
-        </li>
-        <li class="examples-img-item">
-          <a class="list-items link" href="">
-            <img class="img" src="./images/portfolio/portfolio-4.jpg" alt="headphones">
-            <h2 class="examples-img-title">Проект <span lang="en">Prime</span></h2>
-            <p class="examples-img-about">Маркетинг</p>
-          </a>
-        </li>
-        <li class="examples-img-item">
-          <a class="list-items link" href="">
-            <img class="img" src="./images/portfolio/portfolio-5.jpg" alt="two boxes">
-            <h2 class="examples-img-title">Проект <span lang="en">Boxes</span></h2>
-            <p class="examples-img-about">Приложение</p>
-          </a>
-        </li>
-        <li class="examples-img-item">
-          <a class="list-items link" href="">
-            <img class="img" src="./images/portfolio/portfolio-6.jpg" alt="computer display">
-            <h2 class="examples-img-title" lang="en">Inspiration has no Borders</h2>
-            <p class="examples-img-about">Веб-сайт</p>
-          </a>
-        </li>
-        <li class="examples-img-item">
-          <a class="list-items link" href="">
-            <img class="img" src="./images/portfolio/portfolio-7.jpg" alt="opened magazine">
-            <h2 class="examples-img-title">Издание <span lang="en">Limited Edition</span></h2>
-            <p class="examples-img-about">Дизайн</p>
-          </a>
-        </li>
-        <li class="examples-img-item">
-          <a class="list-items link" href="">
-            <img class="img" src="./images/portfolio/portfolio-8.jpg" alt="some label">
-            <h2 class="examples-img-title">Проект <span lang="en">LAB</span></h2>
-            <p class="examples-img-about">Маркетинг</p>
-          </a>
-        </li>
-        <li class="examples-img-item">
-          <a class="list-items link" href="">
-            <img class="img" src="./images/portfolio/portfolio-9.jpg" alt="man working on a laptop">
-            <h2 class="examples-img-title" lang="en">Growing Business</h2>
-            <p class="examples-img-about">Приложение</p>
-          </a>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="visually-hidden">Наши работы</h2>
+        <ul class="examples-list list">
+          <li class="examples-list-item">
+            <button class="nav-btn" type="button">Все</button>
+          </li>
+          <li class="examples-list-item">
+            <button class="nav-btn" type="button">Веб-сайты</button>
+          </li>
+          <li class="examples-list-item">
+            <button class="nav-btn" type="button">Приложения</button>
+          </li>
+          <li class="examples-list-item">
+            <button class="nav-btn" type="button">Дизайн</button>
+          </li>
+          <li class="examples-list-item">
+            <button class="nav-btn" type="button">Маркетинг</button>
+          </li>
+        </ul>
+      </div>
+      <div class="container">
+        <ul class="examples-img-list list">
+          <li class="examples-img-item">
+            <a class="list-items link" href="">
+              <img class="img" src="./images/portfolio/portfolio-1.jpg" alt="laptop desctop">
+              <div class="examples-about-wrapper">
+                <h2 class="examples-img-title">Технокряк</h2>
+                <p class="examples-img-about">Веб-сайт</p>
+              </div>
+            </a>
+          </li>
+          <li class="examples-img-item">
+            <a class="list-items link" href="">
+              <img class="img" src="./images/portfolio/portfolio-2.jpg" alt="two basketball players">
+              <div class="examples-about-wrapper">
+                <h2 class="examples-img-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                <p class="examples-img-about">Дизайн</p>
+              </div>
+            </a>
+          </li>
+          <li class="examples-img-item">
+            <a class="list-items link" href="">
+              <img class="img" src="./images/portfolio/portfolio-3.jpg" alt="fish restaurant logo">
+              <div class="examples-about-wrapper">
+                <h2 class="examples-img-title">Ресторан <span lang="en">Seafood</span></h2>
+                <p class="examples-img-about">Приложение</p>
+              </div>
+            </a>
+          </li>
+          <li class="examples-img-item">
+            <a class="list-items link" href="">
+              <img class="img" src="./images/portfolio/portfolio-4.jpg" alt="headphones">
+              <div class="examples-about-wrapper">
+                <h2 class="examples-img-title">Проект <span lang="en">Prime</span></h2>
+                <p class="examples-img-about">Маркетинг</p>
+              </div>
+            </a>
+          </li>
+          <li class="examples-img-item">
+            <a class="list-items link" href="">
+              <img class="img" src="./images/portfolio/portfolio-5.jpg" alt="two boxes">
+              <div class="examples-about-wrapper">
+                <h2 class="examples-img-title">Проект <span lang="en">Boxes</span></h2>
+                <p class="examples-img-about">Приложение</p>
+              </div>
+            </a>
+          </li>
+          <li class="examples-img-item">
+            <a class="list-items link" href="">
+              <img class="img" src="./images/portfolio/portfolio-6.jpg" alt="computer display">
+              <div class="examples-about-wrapper">
+                <h2 class="examples-img-title" lang="en">Inspiration has no Borders</h2>
+                <p class="examples-img-about">Веб-сайт</p>
+              </div>
+            </a>
+          </li>
+          <li class="examples-img-item">
+            <a class="list-items link" href="">
+              <img class="img" src="./images/portfolio/portfolio-7.jpg" alt="opened magazine">
+              <div class="examples-about-wrapper">
+                <h2 class="examples-img-title">Издание <span lang="en">Limited Edition</span></h2>
+                <p class="examples-img-about">Дизайн</p>
+              </div>
+            </a>
+          </li>
+          <li class="examples-img-item">
+            <a class="list-items link" href="">
+              <img class="img" src="./images/portfolio/portfolio-8.jpg" alt="some label">
+              <div class="examples-about-wrapper">
+                <h2 class="examples-img-title">Проект <span lang="en">LAB</span></h2>
+                <p class="examples-img-about">Маркетинг</p>
+              </div>
+            </a>
+          </li>
+          <li class="examples-img-item">
+            <a class="list-items link" href="">
+              <img class="img" src="./images/portfolio/portfolio-9.jpg" alt="man working on a laptop">
+              <div class="examples-about-wrapper">
+                <h2 class="examples-img-title" lang="en">Growing Business</h2>
+                <p class="examples-img-about">Приложение</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   <footer class="footer">
-    <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-footer" lang="en">Studio</span></a>
-    <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-    <ul class="address-list list">
-      <li class="address-list-item">
-        <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      </li>
-      <li class="address-list-item">
-        <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
-      </li>
-    </ul>
+    <div class="container">
+      <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-footer" lang="en">Studio</span></a>
+      <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+      <ul class="address-list list">
+        <li class="address-list-item">
+          <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="address-list-item">
+          <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+        </li>
+      </ul>
+    </div>
   </footer>
 </body>
 
