--- a/portfolio.html
+++ b/portfolio.html
@@ -32,16 +32,14 @@
             <a class="nav-link" href="https://www.devstudio.com/portfolio">Контакты</a>
           </li>
         </ul>
-        <div class="header-contacts">
-          <ul class="list">
-            <li class="header-contacts-mail">
-              <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
-            </li>
-            <li class="header-contacts-tel">
-              <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="list header-contacts">
+          <li class="header-contacts-mail">
+            <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+          </li>
+          <li class="header-contacts-tel">
+            <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </nav>
     </div>
   </header>
@@ -66,8 +64,6 @@
             <button class="nav-btn" type="button">Маркетинг</button>
           </li>
         </ul>
-      </div>
-      <div class="container">
         <ul class="examples-img-list list">
           <li class="examples-img-item">
             <a class="list-items link" href="">
